<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="1dp"
        android:layout_y="55dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:text="@string/_1st_3rd_day" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:text="@string/firstToThirdDay" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="148dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4th_day" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourthDay" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5th_day" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifthDay" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:text="@string/_6th_day" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixthDay" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7th_day" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seventhDay" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="62dp">


            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:text="@string/seventhDay2" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="126dp"
        android:layout_y="37dp"
        android:text="@string/corona_virus_symtops" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="9dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/take_a_moment_to_read_before_you_start_the_game"
        android:textColor="#00010C" />

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_x="17dp"
        android:layout_y="200dp">

        <ImageView
            android:id="@+id/imgOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/one"></ImageView>

        <ImageView
            android:id="@+id/imgTwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/two"
            android:visibility="gone"></ImageView>

        <ImageView
            android:id="@+id/imgThree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/three"
            android:visibility="gone"></ImageView>

        <ImageView
            android:id="@+id/imgFour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/four"
            android:visibility="gone"></ImageView>

    </FrameLayout>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="17dp"
        android:layout_y="175dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/click_on_the_image" />

    <Button
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="77dp"
        android:layout_y="517dp"
        android:text="@string/click_here_to_start_the_game" />
</AbsoluteLayout>


