<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="11dp"
        android:fontFamily="casual"
        android:text="@string/welcome_to_quiz_app"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/there_will_be_total_7_true_false"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/setName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:hint="@string/enter_your_name_here"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <Button
        android:id="@+id/secondNext"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="141dp"
        android:text="@string/next_text" />
</RelativeLayout>